# BMS

./: .gitignore  README.md
.github/workflows/: README.md  cmake-multi-platform.yml
firmware/: BMSClientApp.py  BMSClientApp_2.py  BMSClientApp_old.py  BMSClientApp_old_updated.py  BMSClientApp_update_sql.py  build_BMSServerApp.ps1
firmware/.metadata/: version.ini
firmware/BMSServerApp/: CMakeLists.txt  toolchain.cmake
firmware/BMSServerApp/include/: adc.h  adc_converter.h  bms_configuration.h  crc.h  intergration_test.h  modbus.h  mosfet_control.h  mux.h  sensor_reader.h  system.h  test_handler.h  usart2.h  utils.h
firmware/BMSServerApp/linker/: stm32_flash.ld
firmware/BMSServerApp/rf/: SerialLibrary.py  log.html  output.xml  report.html  testing.robot
firmware/BMSServerApp/src/: BMSServerApp.c  adc.c  adc_converter.c  crc.c  intergration_test.c  modbus.c  mosfet_control.c  mux.c  sensor_reader.c  system.c  test_handler.c  usart2.c  utils.c
firmware/expandable/: usart1.c
firmware/it2021_bms/: .cproject  .project  it2021_bms.elf.launch
firmware/todo_lib/: adc.h  adc_converter.c  adc_mock.c  adc_mock.h  modbus.h
prototyping/: README.md  test_current_meas  test_mosfet_control.c
prototyping/Lab1_voltage_measurement/: 1_Prototyping_Using_Differential_opamp.txt
prototyping/Lab2_temperature_measurement/: test_lm35.c
schematic/current/: current.kicad_pcb  current.kicad_prl  current.kicad_pro  current.kicad_sch
schematic/mainboard_BMS/: BMS-B_Cu.gbr  BMS-Edge_Cuts.gbr  BMS-F_Cu.gbr  BMS-job.gbrjob  BMS.drl  BMS.kicad_pcb  BMS.kicad_pro  BMS.kicad_sch  fp-info-cache  ~_autosave-BMS.kicad_pcb.lck
schematic/mosfet_copper planes/: fp-info-cache  mosfet.kicad_pcb  mosfet.kicad_prl  mosfet.kicad_pro  mosfet.kicad_sch
schematic/temperature/: temperature.kicad_pcb  temperature.kicad_prl  temperature.kicad_pro  temperature.kicad_sch
simulation/current_protection_simulation/: current_protection.asc  current_protection.plt  current_protection.raw
simulation/current_simulation/: shunt current.asc  shunt current.raw
simulation/short circuit protection_simulation/: short_circuit_protection.asc  short_circuit_protection.op.raw  short_circuit_protection.plt  short_circuit_protection.raw  (+4 more)
test/: README.md  test_lm35.c
views/: prototype_output.py  test_data_generator.py
(+61 files in other folders)
